crates/swc_ecma_parser/tests/comments/stmts/switch/input.js.stderr

  > Leading (hi)

Error: 
  >  4
   ,-[$DIR/tests/comments/stmts/switch/input.js:6:1]
 6 | }
   : ^
   `----
