crates/swc_ecma_parser/tests/comments/stmts/switch/input.js
switch (1) {
    case 2:
        3;
    // 4
}